Modified not to use File.toURL because this doesn't work with JView.
git-svn-id: https://svn.dev.java.net/svn/msv/trunk@461 8cecbe3e-ef64-0410-a610-ece5afc49ac1